@@ -12,10 +12,10 @@ import com.powsybl.dynawo.models.VarConnection;
 import com.powsybl.dynawo.models.VarMapping;
 import com.powsybl.dynawo.models.frequencysynchronizers.FrequencySynchronizedModel;
 import com.powsybl.dynawo.models.utils.BusUtils;
+import com.powsybl.dynawo.models.versionablevariable.VersionableVariables;
 import com.powsybl.iidm.network.Bus;
 import com.powsybl.iidm.network.Generator;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static com.powsybl.dynawo.models.generators.GeneratorProperties.*;
@@ -49,9 +49,9 @@ public class SynchronousGenerator extends BaseGenerator implements FrequencySync
 
     @Override
     public List<VarConnection> getOmegaRefVarConnections() {
-        return Arrays.asList(
-                new VarConnection("omega_grp_@INDEX@", getOmegaPuVarName()),
-                new VarConnection("omegaRef_grp_@INDEX@", getOmegaRefPuVarName()),
+        return List.of(
+                new VarConnection(VersionableVariables.getCurrentValue("OMEGA_GRP"), getOmegaPuVarName()),
+                new VarConnection(VersionableVariables.getCurrentValue("OMEGA_REF_GRP"), getOmegaRefPuVarName()),
                 new VarConnection("running_grp_@INDEX@", getRunningVarName())
         );
     }
